--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <meta charset="utf-8">
 <title>CIGARRO</title>
 <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1"/>
-<meta NAME="description" content="Canal de notícias automotivas">
+<meta NAME="description" content="Eu e meus amigos drogados">
 <meta name="author" content="Bruno A. Vicente, Acadêmico UNESC">
 <meta name="keywords" content="carros, notícias automotivas, bmw, mercedez, porsche, bugatti, ferrari, volkswagem, fiat, chevrolet, mitsubishi, suzuki, audi, renault, carro elétrico, esportivos, clássicos">
 <meta name="robots" content="index, follow"> <!--página deve aparecer nas páginas de busca/ links usados na página devem aparecer no resultado de busca-->
@@ -12,7 +12,7 @@
 </head>
 <body>
     <header>
-        <img id="logo" src="/img/ARB.jpg">
+        <img ID="NEMPENSAR" src="img/NEMPENSAR.jpg">
         <nav>
             <ul>
                 <li><a href="/">Sobre</a></li>
